Fixed  map route marker z-index problem

--- a/src/components/BusStopMapMarker/bus-stop-map-marker.module.css
+++ b/src/components/BusStopMapMarker/bus-stop-map-marker.module.css
@@ -15,10 +15,14 @@
   transform: translate(-50%, -50%);
 }
 
-.stop-marker.is-active .stop-marker__inner {
-  background-color: #18e818;
-  color: black;
-  transform: translate(-50%, -50%) scale(1.3);
+.stop-marker.is-active {
+  z-index: 10;
+  position: relative;
+}
+
+.stop-marker.is-selected {
+  z-index: 10;
+  position: relative;
 }
 
 .stop-marker.is-selected .stop-marker__inner {
